[[releasenotes-33]]

= What's New in OpenNMS Horizon 33

== System requirements

* *Java 11 and 17*: OpenNMS Horizon 33 runs on JDKs 11 and 17.
* *PostgreSQL 10 or higher*: Horizon 33 requires any supported version of PostgreSQL from 10 up to (and including) 16.

== New features and important changes

=== OpenNMS Plugin API

The OpenNMS Plugin API has been updated to version 1.6.0, which includes some new APIs ported over from the Horizon codebase to simplify plugin development, as well as cleanups to dependencies.
It also includes some fixes to the protocol list used by Enlinkd.

=== Expanded metadata support

It is now possible to use the metadata DSL in nearly all configuration files.
For details on all of the subsystems that support the metadata DSL, see xref:operation:deep-dive/meta-data.adoc[the operation manual].

=== Confd improvements

Support for `confd` has been added to the Sentinel container.

=== UI: structured node list

An enhanced node list has been introduced with options for sorting and filtering.

== Breaking changes

=== OpenNMS Minion environment variables changes
The OpenNMS Minion Docker container no longer uses the KAFKA_SINK, KAFKA_RPC and KAFKA_TWIN prefixes to configure Kafka.
Instead, only the KAFKA_IPC prefix is used, which ensures that all Kafka-related settings are set correctly for all features and that ActiveMQ is no longer installed incorrectly.

=== Passive Status Monitor
The Passive Status Monitor previously used the time of the event's arrival as the timestamp of the status.
As this is too imprecise for some use cases, the time field of the event is now also evaluated.
If the field is set, it is adopted unchanged as the timestamp of the status.
If no time is set, the timestamp is generated as before when the event arrives.

=== SNMP Metadata Provisioning Adapter
The SNMP Metadata Provisioning Adapter is not enabled by default anymore.